Address some dark mode contrast issues.

--- a/src/components/HintViewer.scss
+++ b/src/components/HintViewer.scss
@@ -31,7 +31,7 @@ $wide-viewport-width: 1000px;
 
   &.theme--dark {
     .HintViewer {
-      color: var(--color-gray-80);
+      color: var(--color-gray-60);
     }
   }
 }
